# examples

./: .gitignore  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  README.md
GooFit-example/: CMakeLists.txt  main.cc  test.cc
GooFit-example/include/: SinPdf.h  fit.h
GooFit-example/src/: CMakeLists.txt  SinPdf.cu  fit.cc
GooStats-naive-Reactor/: CMakeLists.txt  reactor.cc
GooStats-naive-Reactor/src/: CMakeLists.txt
GooStats-naive-Reactor/tests/: CMakeLists.txt  autoTest.cc
GooStats-simpleFit/: CMakeLists.txt  fit2.cc  fit2.h  main.cc  test.cc
GooStats-solarB8Fit/: CMakeLists.txt
GooStats-solarB8Fit/src/: CMakeLists.txt
GooStats-statAnalysis/: CMakeLists.txt  data  toyMC.cfg
